oss/automationhub/deployment/security/rate-limiting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  template:
    spec:
      containers:
      - name: nginx-ingress-controller
        volumeMounts:
        - name: rate-limit-config
          mountPath: /etc/nginx/conf.d/rate-limiting.conf
          subPath: rate-limiting.conf
      volumes:
      - name: rate-limit-config
        configMap:
          name: nginx-rate-limit-config
